--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "name": "web-api-auth-examples",
   "description": "Basic examples of the Spotify authorization flows through OAuth 2",
   "version": "0.0.2",
+  "scripts": {
+  "start": "node app.js",
+  "server": "nodemon app.js",
+  "client": "npm run start --prefix client",
+  "dev": "concurrently \"npm run server\" \"npm run client\""
+},
   "dependencies": {
     "cookie-parser": "1.3.2",
     "express": "~4.16.0",
+    "nodemon": "^1.18.6",
     "querystring": "~0.2.0",
     "request": "~2.83.0"
   }
