--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,17 @@
   "name": "react-test",
   "version": "0.1.0",
   "private": true,
+  "proxy": {
+    "/login": {
+      "target": "http://localhost:8888"
+    },
+    "/callback": {
+      "target": "http://localhost:8888"
+    },
+    "/refresh_token": {
+      "target": "http://localhost:8888"
+    }
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
